app/styles/main.css
.hoverPointer:hover {
  cursor: pointer;
}

.gameIsLive {
  color: green;
}

.favo-hearth {
  color: red;
  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
}

.winner {
  color: #88E188;
}

.gameHasEnded {
  color: black;
  text-decoration: line-through;
}

.past-games {
  margin-top: 40px;
}

.team-image {
  max-width: 200px;
  max-height: 200px;
}

.jumbotron>div>h1 {
  margin-bottom: 30px;
}

.searchButton {
  margin: 5px;
  margin-bottom: 15px;
}


/* Space out content a bit */

body {
  margin-top: 65px;
  padding-top: 20px;
  padding-bottom: 20px;
}


/* Everything but the jumbotron gets side spacing for mobile first views */

.header, .marketing, .footer {
  padding-left: 15px;
  padding-right: 15px;
}


/* Custom page header */

.header {
  border-bottom: 1px solid #e5e5e5;
}


/* Make the masthead heading the same height as the navigation */

.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}


/* Custom page footer */

.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow>hr {
  margin: 30px 0;
}


/* Main marketing message and sign up button */

.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}

.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}


/* Supporting marketing content */

.marketing {
  margin: 40px 0;
}

.marketing p+h4 {
  margin-top: 28px;
}


/* Responsive: Portrait tablets and up */

@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header, .marketing, .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

